# bti

./: .gitignore  Cargo.toml  Dockerfile  README.md  install.sh
.github/workflows/: docker.yml  release.yml
crates/bti/: Cargo.toml
crates/bti/src/: main.rs  migrate.rs  reclassify.rs  sync.rs
crates/bti/src/crawl/: config.rs  crawler.rs  mod.rs  sync_server.rs
crates/bti/src/web/: index.html  mod.rs  search.rs  server.rs  sync_child.rs
crates/classifier/: Cargo.toml
crates/classifier/src/: extensions.rs  keywords.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  model.rs  storage.rs  sync_proto.rs
crates/dht/: Cargo.toml
crates/dht/src/: bloom.rs  client.rs  fetcher.rs  krpc.rs  ktable.rs  lib.rs  msg.rs  responder.rs
etc/: bti-crawler.service
tools/export-btmcp/: go.mod  go.sum  main.go
