[package]
name = "bti"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bti"
path = "src/main.rs"

[dependencies]
bti-core = { path = "../core" }
bti-dht = { path = "../dht" }
bti-classifier = { path = "../classifier" }
squic = { path = "../../../squic-rust" }
tokio = { version = "1", features = ["full"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
bs58 = "0.5"
dirs = "6"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redb = "2"
libc = "0.2"
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
